feat(presets): inventory handler