@@ -4,6 +4,7 @@ import com.google.gson.JsonElement;
 import com.google.gson.JsonObject;
 import com.google.gson.reflect.TypeToken;
 import java.lang.reflect.Type;
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -19,6 +20,7 @@ public abstract class Configuration implements JsonConvertible {
     private String identifier;
 
     protected Configuration() {}
+
     protected Configuration(String identifier) {
         this.setConfigurationIdentifier(identifier);
     }
@@ -28,8 +30,13 @@ public abstract class Configuration implements JsonConvertible {
         JsonObject json = new JsonObject();
 
         this.options.values().forEach(option -> {
-            if (!option.isValid()) return;
-            json.add(option.getKey(), Hardlands.GSON.toJsonTree(option.getValue()));
+            if (!option.isValid()) {
+                return;
+            }
+
+            json.add(
+                    option.getKey(),
+                    Hardlands.GSON.toJsonTree(option.getValue()));
         });
 
         return json;
@@ -40,19 +47,25 @@ public abstract class Configuration implements JsonConvertible {
         json.getAsJsonObject().entrySet().forEach(entry -> {
             Option<?> option = this.options.get(entry.getKey());
 
-            if (option == null) return;
+            if (option == null) {
+                return;
+            }
 
-            option.setValue(Hardlands.GSON.fromJson(entry.getValue(), option.getDataType()));
+            option.setValue(Hardlands.GSON.fromJson(
+                    entry.getValue(),
+                    option.getDataType()));
         });
     }
 
     public final Map<String, Option<?>> getConfigurationOptions() {
-        return Map.copyOf(this.options);
+        return Collections.unmodifiableMap(
+                new LinkedHashMap<>(this.options));
     }
 
     public final String getConfigurationIdentifier() {
         if (this.identifier == null) {
-            throw new IllegalStateException("Configuration identifier has not been set");
+            throw new IllegalStateException(
+                    "Configuration identifier has not been set");
         }
 
         return this.identifier;
@@ -60,51 +73,102 @@ public abstract class Configuration implements JsonConvertible {
 
     protected final void setConfigurationIdentifier(String identifier) {
         if (this.identifier != null) {
-            throw new IllegalStateException("Configuration identifier is already set");
+            throw new IllegalStateException(
+                    "Configuration identifier is already set");
         }
 
         this.identifier = identifier;
     }
 
     public boolean isConfigurationValid() {
-        return this.options.values().stream().allMatch(Option::isValid);
+        return this.options.values().stream()
+                .allMatch(Option::isValid);
     }
 
-    // Registry
     protected final <T> Option<T> registerOption(Option<T> option) {
         if (this.options.putIfAbsent(option.getKey(), option) != null) {
-            throw new IllegalArgumentException("Option already registered: " + option.getKey());
+            throw new IllegalArgumentException(
+                    "Option already registered: " + option.getKey());
         }
 
         return option;
     }
 
-    protected final <T> Option<T> registerOption(String key, Class<T> type) {
+    protected final <T> Option<T> registerOption(
+            String key,
+            Class<T> type
+    ) {
         return this.registerOption(new Option<>(key, type));
     }
 
-    protected final <T> Option<T> registerOption(String key, Class<T> type, Predicate<T> validator) {
-        return this.registerOption(new Option<>(key, type, validator));
+    protected final <T> Option<T> registerOption(
+            String key,
+            Class<T> type,
+            Predicate<T> validator
+    ) {
+        return this.registerOption(
+                new Option<>(key, type, validator));
     }
 
-    protected final <T> Option<List<T>> registerList(String key, Class<T> elementType) {
-        return this.registerOption(key, TypeToken.getParameterized(List.class, elementType).getType());
+    protected final <T> Option<List<T>> registerList(
+            String key,
+            Class<T> elementType
+    ) {
+        return this.registerOption(
+                key,
+                TypeToken.getParameterized(
+                        List.class,
+                        elementType).getType());
     }
 
-    protected final <T> Option<List<T>> registerList(String key, Class<T> elementType, Predicate<List<T>> validator) {
-        return this.registerOption(key, TypeToken.getParameterized(List.class, elementType).getType(), validator);
+    protected final <T> Option<List<T>> registerList(
+            String key,
+            Class<T> elementType,
+            Predicate<List<T>> validator
+    ) {
+        return this.registerOption(
+                key,
+                TypeToken.getParameterized(
+                        List.class,
+                        elementType).getType(),
+                validator);
     }
 
-    protected final <T> Option<Set<T>> registerSet(String key, Class<T> elementType) {
-        return this.registerOption(key, TypeToken.getParameterized(Set.class, elementType).getType());
+    protected final <T> Option<Set<T>> registerSet(
+            String key,
+            Class<T> elementType
+    ) {
+        return this.registerOption(
+                key,
+                TypeToken.getParameterized(
+                        Set.class,
+                        elementType).getType());
     }
 
-    protected final <T> Option<Set<T>> registerSet(String key, Class<T> elementType, Predicate<Set<T>> validator) {
-        return this.registerOption(key, TypeToken.getParameterized(Set.class, elementType).getType(), validator);
+    protected final <T> Option<Set<T>> registerSet(
+            String key,
+            Class<T> elementType,
+            Predicate<Set<T>> validator
+    ) {
+        return this.registerOption(
+                key,
+                TypeToken.getParameterized(
+                        Set.class,
+                        elementType).getType(),
+                validator);
     }
 
-    protected final <K, V> Option<Map<K, V>> registerMap(String key, Class<K> keyType, Class<V> valueType) {
-        return this.registerOption(key, TypeToken.getParameterized(Map.class, keyType, valueType).getType());
+    protected final <K, V> Option<Map<K, V>> registerMap(
+            String key,
+            Class<K> keyType,
+            Class<V> valueType
+    ) {
+        return this.registerOption(
+                key,
+                TypeToken.getParameterized(
+                        Map.class,
+                        keyType,
+                        valueType).getType());
     }
 
     protected final <K, V> Option<Map<K, V>> registerMap(
@@ -113,14 +177,29 @@ public abstract class Configuration implements JsonConvertible {
             Class<V> valueType,
             Predicate<Map<K, V>> validator
     ) {
-        return this.registerOption(key, TypeToken.getParameterized(Map.class, keyType, valueType).getType(), validator);
+        return this.registerOption(
+                key,
+                TypeToken.getParameterized(
+                        Map.class,
+                        keyType,
+                        valueType).getType(),
+                validator);
     }
 
-    private <T> Option<T> registerOption(String key, Type type) {
-        return this.registerOption(new Option<>(key, type));
+    private <T> Option<T> registerOption(
+            String key,
+            Type type
+    ) {
+        return this.registerOption(
+                new Option<>(key, type));
     }
 
-    private <T> Option<T> registerOption(String key, Type type, Predicate<T> validator) {
-        return this.registerOption(new Option<>(key, type, validator));
+    private <T> Option<T> registerOption(
+            String key,
+            Type type,
+            Predicate<T> validator
+    ) {
+        return this.registerOption(
+                new Option<>(key, type, validator));
     }
 }
